--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_navigation" />
+        app:menu="@menu/bottom_navigation"
+        android:background="@color/green_dark"
+        app:itemTextColor="@color/white"
+        app:itemIconTint="@color/white"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
