--- a/app/src/main/res/layout/fragment_item_add.xml
+++ b/app/src/main/res/layout/fragment_item_add.xml
@@ -14,6 +14,7 @@
         android:textStyle="bold"
         android:textSize="16sp"
         android:text="Item"
+        android:textColor="@color/green_dark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="16dp"/>
@@ -22,8 +23,9 @@
         android:id="@+id/itemDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="12"
         android:inputType="text"
+        android:textColor="@color/green_dark"
         android:hint="Shopping item"
         app:layout_constraintStart_toStartOf="@+id/newItemTextView"
         app:layout_constraintTop_toBottomOf="@+id/newItemTextView"
@@ -36,6 +38,7 @@
         android:textStyle="bold"
         android:textSize="16sp"
         android:text="Details"
+        android:textColor="@color/green_dark"
         app:layout_constraintTop_toBottomOf="@id/itemDisplay"
         app:layout_constraintStart_toStartOf="@id/itemDisplay"
         android:layout_marginTop="8dp"/>
@@ -44,12 +47,15 @@
         android:id="@+id/itemDetailsDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="12"
         android:gravity="start|top"
+        android:textColor="@color/green_dark"
         android:inputType="textMultiLine"
+        android:lines="4"
         app:layout_constraintStart_toStartOf="@+id/itemDetailsTextView"
         app:layout_constraintTop_toBottomOf="@+id/itemDetailsTextView"
-        android:layout_marginTop="4dp"/>
+        android:layout_marginTop="4dp"
+        android:background="@drawable/edittext_shape"/>
 
     <TextView
         android:id="@+id/newItemQtyTextView"
@@ -58,6 +64,7 @@
         android:textStyle="bold"
         android:textSize="16sp"
         android:text="Quantity"
+        android:textColor="@color/green_dark"
         app:layout_constraintTop_toBottomOf="@id/itemDetailsDisplay"
         app:layout_constraintStart_toStartOf="@id/itemDetailsDisplay"
         android:layout_marginTop="8dp"/>
@@ -75,13 +82,20 @@
     <TextView
         android:id="@+id/itemQtyDisplay"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1"
+        android:layout_height="0dp"
+        tools:text="1"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="16sp"
         android:paddingHorizontal="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/arrowDownImageView"
         app:layout_constraintStart_toEndOf="@+id/arrowDownImageView"
         app:layout_constraintTop_toTopOf="@+id/arrowDownImageView"
         android:layout_marginStart="4dp"
+        android:background="@drawable/edittext_shape"
         />
 
     <ImageButton
@@ -99,10 +113,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Size"
+        android:textColor="@color/green_dark"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/itemDetailsDisplay"
-        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/newItemQtyTextView"
         app:layout_constraintTop_toTopOf="@id/newItemQtyTextView" />
 
@@ -112,26 +127,32 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@+id/newItemSizeTextView"
         app:layout_constraintTop_toBottomOf="@+id/newItemSizeTextView"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:background="@drawable/edittext_shape"/>
 
     <CheckBox
         android:id="@+id/urgentCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Urgent"
+        android:textColor="@color/green_dark"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/arrowDownImageView"
         app:layout_constraintTop_toBottomOf="@+id/arrowDownImageView"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        />
 
     <Button
         android:id="@+id/addToListButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add To List"
+        android:background="@drawable/custom_button_shape"
+        android:backgroundTint="@color/green_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/urgentCheckBox"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
