--- a/app/src/main/res/layout/fragment_item_edit.xml
+++ b/app/src/main/res/layout/fragment_item_edit.xml
@@ -14,6 +14,7 @@
         android:textStyle="bold"
         android:textSize="16sp"
         android:text="Item"
+        android:textColor="@color/green_dark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="16dp"/>
@@ -22,9 +23,10 @@
         android:id="@+id/editItemDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="12"
         android:inputType="text"
         android:hint="Shopping item"
+        android:textColor="@color/green_dark"
         app:layout_constraintStart_toStartOf="@+id/editItemTextView"
         app:layout_constraintTop_toBottomOf="@+id/editItemTextView"
         android:layout_marginTop="4dp"/>
@@ -36,6 +38,7 @@
         android:textStyle="bold"
         android:textSize="16sp"
         android:text="Details"
+        android:textColor="@color/green_dark"
         app:layout_constraintTop_toBottomOf="@id/editItemDisplay"
         app:layout_constraintStart_toStartOf="@id/editItemDisplay"
         android:layout_marginTop="8dp"/>
@@ -44,12 +47,16 @@
         android:id="@+id/editItemDetailsDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="12"
+        android:textColor="@color/green_dark"
         android:gravity="start|top"
         android:inputType="textMultiLine"
+        android:lines="4"
         app:layout_constraintStart_toStartOf="@+id/editItemDetailsTextView"
         app:layout_constraintTop_toBottomOf="@+id/editItemDetailsTextView"
-        android:layout_marginTop="4dp"/>
+        android:layout_marginTop="4dp"
+        android:background="@drawable/edittext_shape"
+        />
 
     <TextView
         android:id="@+id/editItemQtyTextView"
@@ -58,6 +65,7 @@
         android:textStyle="bold"
         android:textSize="16sp"
         android:text="Quantity"
+        android:textColor="@color/green_dark"
         app:layout_constraintTop_toBottomOf="@id/editItemDetailsDisplay"
         app:layout_constraintStart_toStartOf="@id/editItemDetailsDisplay"
         android:layout_marginTop="8dp"/>
@@ -75,13 +83,21 @@
     <TextView
         android:id="@+id/editItemQtyDisplay"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         tools:text="1"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="16sp"
+
         android:paddingHorizontal="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/arrowDownImageView"
         app:layout_constraintStart_toEndOf="@+id/arrowDownImageView"
         app:layout_constraintTop_toTopOf="@+id/arrowDownImageView"
         android:layout_marginStart="4dp"
+        android:background="@drawable/edittext_shape"
         />
 
     <ImageButton
@@ -99,10 +115,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Size"
+        android:textColor="@color/green_dark"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/editItemDetailsDisplay"
-        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/editItemQtyTextView"
         app:layout_constraintTop_toTopOf="@id/editItemQtyTextView" />
 
@@ -112,13 +129,15 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@+id/editItemSizeTextView"
         app:layout_constraintTop_toBottomOf="@+id/editItemSizeTextView"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:background="@drawable/edittext_shape"/>
 
     <CheckBox
         android:id="@+id/editUrgentCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Urgent"
+        android:textColor="@color/green_dark"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/arrowDownImageView"
         app:layout_constraintTop_toBottomOf="@+id/arrowDownImageView"
@@ -129,6 +148,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Update Item"
+        android:textSize="16sp"
+        android:background="@drawable/custom_button_shape"
+        android:backgroundTint="@color/green_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editUrgentCheckBox"
