--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="green">#295D29</color>
+    <color name="green_dark">#005005</color>
+    <color name="green_dark_2">#295D29</color>
+    <color name="green_light">#4A9A29</color>
+    <color name="green_light_2">#008A00</color>
+
 </resources>
